# heb-tts-benchmark

./: .gitignore  README.md  index.html  pyproject.toml  saspeech_100_gold.csv  saspeech_100_gold_synthesis.csv  summary.json
src/: prepare_audio_phonikud.py  prepare_data.py  prepare_evaluation.py  prepare_summary.py  prepare_synthesis.py  prepare_transcripts.py  prepare_visual.py  prepare_visual1.py  prepare_visual2.py  transcribe.py
transcripts/: chatterbox-dicta.json  gemini_unvocalized.json  hebtts_unvocalized.json  lothm_unvocalized.json  mamre-phonikud.json  mms_nakdimon.json  openai_unvocalized.json  phonikud_enhanced_epoch=5159-step=3145742.json  phonikud_piper_high.json  phonikud_saspeech_piper.json  phonikud_shaul_whisper_ipa.json  phonikud_stts2.json  phonikud_vocalized_epoch=5159-step=3145742.json  piper-phonikud.json  roboshaul_dicta.json  roboshaul_nakdimon.json  saspeech_nakdimon.json  unvocalized_mock_epoch=5159-step=3145742.json  vocalized_mock_epoch=5159-step=3145742.json  zonus-phonikud.json
transcripts1/: chatterbox-dicta.json  gemini_unvocalized.json  hebtts_unvocalized.json  lothm_unvocalized.json  mms_nakdimon.json  phonikud_enhanced_epoch=5159-step=3145742.json  phonikud_stts2.json  piper-phonikud.json  roboshaul_dicta.json
transcripts_clean/: chatterbox-dicta.json  gemini_unvocalized.json  hebtts_unvocalized.json  lothm_unvocalized.json  mamre-phonikud.json  mms_nakdimon.json  openai_unvocalized.json  phonikud_enhanced_epoch=5159-step=3145742.json  phonikud_piper_high.json  phonikud_saspeech_piper.json  phonikud_shaul_whisper_ipa.json  (+9 more)
(+39 files in other folders)
