[project]
name = "heb-tts-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ctranslate2>=4.6.0",
    "huggingface-hub>=0.35.0",
    "jiwer>=4.0.0",
    "pandas>=2.3.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
]
