[project]
name = "heb-tts-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adjusttext>=1.2.0",
    "ctranslate2>=4.6.0",
    "faster-whisper>=1.2.0",
    "huggingface-hub>=0.35.0",
    "jiwer>=4.0.0",
    "kaleido>=1.1.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "phonikud>=0.4.1",
    "phonikud-onnx>=1.0.6",
    "phonikud-tts>=0.1.3",
    "plotly>=6.3.0",
    "seaborn>=0.13.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
]
